--- a/force-app/main/default/classes/LacoreConnect/Common/DTOs/AddressDto.cls
+++ b/force-app/main/default/classes/LacoreConnect/Common/DTOs/AddressDto.cls
@@ -1,3 +1,7 @@
+/**
+ * @description DTO for address information
+ */
+@TestVisible
 public class AddressDto {
     @AuraEnabled public String name { get; set; }
     @AuraEnabled public String company { get; set; }
