--- a/force-app/main/default/classes/LacoreConnect/Common/DTOs/AdvancedOptionsDto.cls
+++ b/force-app/main/default/classes/LacoreConnect/Common/DTOs/AdvancedOptionsDto.cls
@@ -1,3 +1,7 @@
+/**
+ * @description DTO for advanced shipping options
+ */
+@TestVisible
 public class AdvancedOptionsDto {
     @AuraEnabled public Integer warehouseId;
     @AuraEnabled public Boolean nonMachinable;
