--- a/force-app/main/default/classes/LacoreConnect/Common/DTOs/CustomDataDto.cls
+++ b/force-app/main/default/classes/LacoreConnect/Common/DTOs/CustomDataDto.cls
@@ -1,3 +1,7 @@
+/**
+ * @description DTO for custom data information
+ */
+@TestVisible
 public class CustomDataDto {
     @AuraEnabled public String name;
     @AuraEnabled public String value;
