--- a/force-app/main/default/classes/LacoreConnect/Common/DTOs/InsuranceOptionsDto.cls
+++ b/force-app/main/default/classes/LacoreConnect/Common/DTOs/InsuranceOptionsDto.cls
@@ -1,3 +1,7 @@
+/**
+ * @description DTO for insurance options
+ */
+@TestVisible
 public class InsuranceOptionsDto {
     @AuraEnabled public String provider;
     @AuraEnabled public Boolean insureShipment;
