--- a/force-app/main/default/classes/LacoreConnect/Common/DTOs/InternationalOptionsDto.cls
+++ b/force-app/main/default/classes/LacoreConnect/Common/DTOs/InternationalOptionsDto.cls
@@ -1,3 +1,7 @@
+/**
+ * @description DTO for international shipping options
+ */
+@TestVisible
 public class InternationalOptionsDto {
     @AuraEnabled public String contents;
     @AuraEnabled public String nonDelivery;
