--- a/force-app/main/default/classes/LacoreConnect/Common/DTOs/WeightDto.cls
+++ b/force-app/main/default/classes/LacoreConnect/Common/DTOs/WeightDto.cls
@@ -1,3 +1,7 @@
+/**
+ * @description DTO for package weight
+ */
+@TestVisible
 public class WeightDto {
     @AuraEnabled public Decimal value;
     @AuraEnabled public String units;
