--- a/force-app/main/default/classes/LacoreConnect/Orders/Actions/CreateOrderAction.cls
+++ b/force-app/main/default/classes/LacoreConnect/Orders/Actions/CreateOrderAction.cls
@@ -1,4 +1,14 @@
+/**
+ * @description Action class for creating and updating orders in LacoreConnect.
+ * This class provides an invocable method that can be called from Flow Builder
+ * to create or update one or more orders.
+ */
 public with sharing class CreateOrderAction {
+    /**
+     * @description Invocable method to create or update orders in LacoreConnect
+     * @param requests List of CreateOrderRequest objects containing order data
+     * @return List<CreateOrderResponse> List of responses containing operation results
+     */
     @InvocableMethod(label='Create/Update Order(s)' description='Create or update one or more orders in Lacore Connect' category='Lacore Connect')
     public static List<CreateOrderResponse> execute(List<CreateOrderRequest> requests) {
         List<CreateOrderResponse> responses = new List<CreateOrderResponse>();
@@ -30,7 +40,7 @@ public with sharing class CreateOrderAction {
                     } else {
                         response = LacoreConnectService.createOrder(orderDto);
                     }
-                responses.add(new CreateOrderResponse(response));
+                    responses.add(new CreateOrderResponse(response));
                 }
             } catch (Exception e) {
                 throw new AuraHandledException(e.getMessage());
@@ -40,237 +50,186 @@ public with sharing class CreateOrderAction {
         return responses;
     }
     
+    /**
+     * @description Creates an OrderDto from OrderRequestData
+     * @param data The order request data to convert
+     * @return OrderDto The created order DTO
+     */
     private static OrderDto createOrderDto(OrderRequestData data) {
-        OrderDto orderDto = new OrderDto();
-        orderDto.orderId = data.orderId;
-        orderDto.shipstationOrderId = data.shipstationOrderId;
-        orderDto.orderNumber = data.orderNumber;
-        orderDto.orderKey = data.orderKey;
-        orderDto.createDateTimeUtc = data.createDateTimeUtc;
-        orderDto.modifyDateTimeUtc = data.modifyDateTimeUtc;
-        orderDto.orderDateTimeUtc = data.orderDateTimeUtc;
-        orderDto.paymentDateTimeUtc = data.paymentDateTimeUtc;
-        orderDto.shipByDateTimeUtc = data.shipByDateTimeUtc;
-        orderDto.shipDateUtc = data.shipDateUtc;
-        orderDto.orderStatus = data.orderStatus;
-        orderDto.customerUsername = data.customerUsername;
-        orderDto.customerEmail = data.customerEmail;
-        orderDto.billTo = data.billTo;
-        orderDto.shipTo = data.shipTo;
-        orderDto.items = data.items;
-        orderDto.orderTotal = data.orderTotal;
-        orderDto.amountPaid = data.amountPaid;
-        orderDto.shippingAmount = data.shippingAmount;
-        orderDto.taxAmount = data.taxAmount;
-        orderDto.customerNotes = data.customerNotes;
-        orderDto.internalNotes = data.internalNotes;
-        orderDto.gift = data.gift;
-        orderDto.giftMessage = data.giftMessage;
-        orderDto.paymentMethod = data.paymentMethod;
-        orderDto.requestedShippingService = data.requestedShippingService;
-        orderDto.carrierCode = data.carrierCode;
-        orderDto.serviceCode = data.serviceCode;
-        orderDto.weight = data.weight;
-        orderDto.dimensions = data.dimensions;
-        orderDto.tagIds = data.tagIds;
-        orderDto.orderGroupId = data.orderGroupId;
-        orderDto.sourceOfOrder = data.sourceOfOrder;
-        orderDto.storefrontId = data.storefrontId;
-        orderDto.fulfilledByService = data.fulfilledByService;
-        orderDto.onHoldReason = data.onHoldReason;
-        orderDto.holdUntilDate = data.holdUntilDate;
-        orderDto.userId = data.userId;
-        orderDto.externallyFulfilled = data.externallyFulfilled;
-        orderDto.externallyFulfilledBy = data.externallyFulfilledBy;
-        orderDto.insuranceOptions = data.insuranceOptions;
-        orderDto.internationalOptions = data.internationalOptions;
-        orderDto.advancedOptions = data.advancedOptions;
-        orderDto.packageCode = data.packageCode;
-        orderDto.splitOrderIds = data.splitOrderIds;
-        orderDto.confirmation = data.confirmation;
-        orderDto.parentReshipOrderId = data.parentReshipOrderId;
-        orderDto.parentSplitOrderId = data.parentSplitOrderId;
-        orderDto.customData = data.customData;
-        return orderDto;
+        OrderDto dto = new OrderDto();
+        dto.orderId = data.orderId;
+        dto.orderNumber = data.orderNumber;
+        dto.orderDateTimeUtc = data.orderDateTimeUtc;
+        dto.orderStatus = data.orderStatus;
+        dto.orderTotal = data.orderTotal;
+        dto.taxAmount = data.taxAmount;
+        dto.shippingAmount = data.shippingAmount;
+        dto.customerNotes = data.customerNotes;
+        dto.storefrontId = data.storefrontId;
+        dto.customerEmail = data.customerEmail;
+        dto.customerUsername = data.customerUsername;
+        dto.billTo = data.billTo;
+        dto.shipTo = data.shipTo;
+        dto.items = data.items;
+        return dto;
     }
     
+    /**
+     * @description Request class for the CreateOrder action
+     */
     public class CreateOrderRequest {
-        @InvocableVariable(required=true label='Is Update Operation')
-        public Boolean isUpdate;
-        
-        @InvocableVariable(required=true label='Is Bulk Operation')
+        /** Whether this is a bulk operation */
+        @InvocableVariable
         public Boolean isBulkOperation;
         
-        @InvocableVariable(label='Single Order Data')
+        /** Whether this is an update operation */
+        @InvocableVariable
+        public Boolean isUpdate;
+        
+        /** Single order data for non-bulk operations */
+        @InvocableVariable
         public OrderRequestData order;
         
-        @InvocableVariable(label='Bulk Orders Data')
+        /** List of order data for bulk operations */
+        @InvocableVariable
         public List<OrderRequestData> orders;
     }
     
+    /**
+     * @description Data class for order request information
+     */
     public class OrderRequestData {
+        /** The order ID */
         @InvocableVariable(required=true label='Order ID')
         public String orderId;
         
-        @InvocableVariable(label='Shipstation Order ID')
-        public String shipstationOrderId;
-        
+        /** The order number */
         @InvocableVariable(required=true label='Order Number')
         public String orderNumber;
         
-        @InvocableVariable(label='Order Key')
-        public String orderKey;
-        
-        @InvocableVariable(label='Create Date Time UTC')
-        public DateTime createDateTimeUtc;
-        
-        @InvocableVariable(label='Modify Date Time UTC')
-        public DateTime modifyDateTimeUtc;
-        
+        /** The order date/time in UTC */
         @InvocableVariable(label='Order Date Time UTC')
         public DateTime orderDateTimeUtc;
         
-        @InvocableVariable(label='Payment Date Time UTC')
-        public DateTime paymentDateTimeUtc;
-        
-        @InvocableVariable(label='Ship By Date Time UTC')
-        public DateTime shipByDateTimeUtc;
-        
-        @InvocableVariable(label='Ship Date UTC')
-        public DateTime shipDateUtc;
-        
+        /** The order status */
         @InvocableVariable(required=true label='Order Status')
         public String orderStatus;
         
-        @InvocableVariable(label='Customer Username')
-        public String customerUsername;
-        
-        @InvocableVariable(required=true label='Customer Email')
-        public String customerEmail;
-        
-        @InvocableVariable(required=true label='Bill To')
-        public AddressDto billTo;
-        
-        @InvocableVariable(required=true label='Ship To')
-        public AddressDto shipTo;
-        
-        @InvocableVariable(required=true label='Order Items')
-        public List<OrderItemDto> items;
-        
+        /** The order total amount */
         @InvocableVariable(required=true label='Order Total')
         public Decimal orderTotal;
         
-        @InvocableVariable(label='Amount Paid')
-        public Decimal amountPaid;
-        
-        @InvocableVariable(label='Shipping Amount')
-        public Decimal shippingAmount;
-        
+        /** The tax amount */
         @InvocableVariable(label='Tax Amount')
         public Decimal taxAmount;
         
+        /** The shipping amount */
+        @InvocableVariable(label='Shipping Amount')
+        public Decimal shippingAmount;
+        
+        /** Customer notes */
         @InvocableVariable(label='Customer Notes')
         public String customerNotes;
         
-        @InvocableVariable(label='Internal Notes')
-        public String internalNotes;
-        
-        @InvocableVariable(label='Is Gift')
-        public Boolean gift;
-        
-        @InvocableVariable(label='Gift Message')
-        public String giftMessage;
-        
-        @InvocableVariable(required=true label='Payment Method')
-        public String paymentMethod;
-        
-        @InvocableVariable(label='Requested Shipping Service')
-        public String requestedShippingService;
-        
-        @InvocableVariable(label='Carrier Code')
-        public String carrierCode;
-        
-        @InvocableVariable(label='Service Code')
-        public String serviceCode;
-        
-        @InvocableVariable(label='Weight')
-        public WeightDto weight;
-        
-        @InvocableVariable(label='Dimensions')
-        public DimensionsDto dimensions;
-        
-        @InvocableVariable(label='Tag IDs')
-        public List<String> tagIds;
-        
-        @InvocableVariable(label='Order Group ID')
-        public String orderGroupId;
-        
-        @InvocableVariable(label='Source of Order')
-        public String sourceOfOrder;
-        
+        /** The storefront ID */
         @InvocableVariable(required=true label='Storefront ID')
         public String storefrontId;
         
-        @InvocableVariable(label='Fulfilled By Service')
-        public String fulfilledByService;
+        /** Customer email */
+        @InvocableVariable(required=true label='Customer Email')
+        public String customerEmail;
         
-        @InvocableVariable(label='On Hold Reason')
-        public String onHoldReason;
+        /** Customer username */
+        @InvocableVariable(label='Customer Username')
+        public String customerUsername;
         
-        @InvocableVariable(label='Hold Until Date')
-        public String holdUntilDate;
+        /** Billing address */
+        @InvocableVariable(required=true label='Bill To')
+        public AddressDto billTo;
         
-        @InvocableVariable(label='User ID')
-        public String userId;
+        /** Shipping address */
+        @InvocableVariable(required=true label='Ship To')
+        public AddressDto shipTo;
         
-        @InvocableVariable(label='Externally Fulfilled')
-        public Boolean externallyFulfilled;
-        
-        @InvocableVariable(label='Externally Fulfilled By')
-        public String externallyFulfilledBy;
-        
-        @InvocableVariable(label='Insurance Options')
-        public InsuranceOptionsDto insuranceOptions;
-        
-        @InvocableVariable(label='International Options')
-        public InternationalOptionsDto internationalOptions;
-        
-        @InvocableVariable(label='Advanced Options')
-        public AdvancedOptionsDto advancedOptions;
-        
-        @InvocableVariable(label='Package Code')
-        public String packageCode;
-        
-        @InvocableVariable(label='Split Order IDs')
-        public List<String> splitOrderIds;
-        
-        @InvocableVariable(label='Confirmation')
-        public String confirmation;
-        
-        @InvocableVariable(label='Parent Reship Order ID')
-        public String parentReshipOrderId;
-        
-        @InvocableVariable(label='Parent Split Order ID')
-        public String parentSplitOrderId;
-        
-        @InvocableVariable(label='Custom Data')
-        public List<CustomDataDto> customData;
+        /** Order items */
+        @InvocableVariable(required=true label='Order Items')
+        public List<OrderItemDto> items;
     }
     
+    /**
+     * @description Response class for the CreateOrder action
+     */
     public class CreateOrderResponse {
+        /** Whether the request was successful */
         @InvocableVariable
         public Boolean success;
         
+        /** Error message if the request failed */
         @InvocableVariable
         public String message;
         
+        /** The order data in JSON format */
         @InvocableVariable
-        public String data;
+        public OrderDto data;
         
+        /** Whether the bulk operation had any errors */
+        @InvocableVariable
+        public Boolean hasErrors;
+        
+        /** List of bulk operation results */
+        @InvocableVariable
+        public List<BulkOrderResult> results;
+        
+        /**
+         * @description Constructor that creates a response from an API response
+         * @param response The API response from LacoreConnectService
+         */
         public CreateOrderResponse(LacoreConnectService.ApiResponse response) {
             this.success = response.isSuccess;
             this.message = response.errorMessage;
-            this.data = response.body;
+            
+            if (response.isSuccess) {
+                try {
+                    // Try to deserialize as bulk response first
+                    BulkOrderResponse bulkResponse = (BulkOrderResponse)JSON.deserialize(response.body, BulkOrderResponse.class);
+                    this.hasErrors = bulkResponse.hasErrors;
+                    this.results = bulkResponse.results;
+                } catch (JSONException e) {
+                    // If not bulk response, try single order
+                    this.data = (OrderDto)JSON.deserialize(response.body, OrderDto.class);
+                }
+            }
         }
+    }
+    
+    /**
+     * @description Response class for bulk order operations
+     */
+    public class BulkOrderResponse {
+        /** Whether any orders in the bulk operation had errors */
+        public Boolean hasErrors;
+        
+        /** List of results for each order in the bulk operation */
+        public List<BulkOrderResult> results;
+    }
+    
+    /**
+     * @description Result class for individual orders in a bulk operation
+     */
+    public class BulkOrderResult {
+        /** The order ID */
+        public String orderId;
+        
+        /** The order number */
+        public String orderNumber;
+        
+        /** The order key */
+        public String orderKey;
+        
+        /** Whether this specific order was processed successfully */
+        public Boolean success;
+        
+        /** Error message if this specific order failed */
+        public String errorMessage;
     }
 } 
