--- a/force-app/main/default/classes/LacoreConnect/Orders/Actions/ListOrdersAction.cls
+++ b/force-app/main/default/classes/LacoreConnect/Orders/Actions/ListOrdersAction.cls
@@ -1,18 +1,33 @@
-public class ListOrdersAction {
-    @InvocableMethod(label='List Orders' description='Lists orders from LacoreConnect' category='Lacore Connect')
+/**
+ * @description Action class for listing orders in LacoreConnect.
+ * This class provides an invocable method that can be called from Flow Builder
+ * to retrieve a list of orders based on specified criteria.
+ */
+public with sharing class ListOrdersAction {
+    /**
+     * @description Invocable method to list orders in LacoreConnect
+     * @param requests List of ListOrdersRequest objects containing search criteria
+     * @return List<ListOrdersResponse> List of responses containing order data
+     */
+    @InvocableMethod(label='List Orders' description='Retrieve a list of orders from Lacore Connect' category='Lacore Connect')
     public static List<ListOrdersResponse> execute(List<ListOrdersRequest> requests) {
         List<ListOrdersResponse> responses = new List<ListOrdersResponse>();
         
         for (ListOrdersRequest request : requests) {
             try {
                 LacoreConnectService.ApiResponse response = LacoreConnectService.listOrders(
-                    request.brandId,
-                    request.customerId,
-                    request.status,
+                    request.storefrontId,
                     request.page,
                     request.pageSize,
                     request.sortBy,
-                    request.sortDir
+                    request.sortDir,
+                    request.createdDateStart,
+                    request.createdDateEnd,
+                    request.orderDateStart,
+                    request.orderDateEnd,
+                    request.orderNumber,
+                    request.orderStatus
+                    
                 );
                 responses.add(new ListOrdersResponse(response));
             } catch (Exception e) {
@@ -23,30 +38,50 @@ public class ListOrdersAction {
         return responses;
     }
     
+    /**
+     * @description Request class for the ListOrders action
+     */
     public class ListOrdersRequest {
-        @InvocableVariable
-        public String brandId;
+        /** The storefront ID to filter orders by */
+        @InvocableVariable(required=true label='Storefront ID')
+        public String storefrontId;
         
-        @InvocableVariable
-        public String customerId;
-        
-        @InvocableVariable
-        public String status;
-        
-        @InvocableVariable
-        public Integer page;
-        
-        @InvocableVariable
-        public Integer pageSize;
-        
-        @InvocableVariable
+        @InvocableVariable(required=false label='Sort By (createDate, orderDate, modifyDate)')
         public String sortBy;
         
-        @InvocableVariable
+        @InvocableVariable(required=false label='Sort Direction (asc, desc)')
         public String sortDir;
+        
+        @InvocableVariable(required=false label='Start Date')
+        public Date createdDateStart;
+        
+        @InvocableVariable(required=false label='End Date')
+        public Date createdDateEnd;
+        
+        @InvocableVariable(required=false label='Start Date')
+        public Date orderDateStart;
+        
+        @InvocableVariable(required=false label='End Date')
+        public Date orderDateEnd;
+        
+        @InvocableVariable(required=false label='Order Number')
+        public String orderNumber;
+        
+        @InvocableVariable(required=false label='Order Status')
+        public String orderStatus;
+
+        @InvocableVariable(required=false label='Page')
+        public Integer page;
+
+        @InvocableVariable(required=false label='Page Size')
+        public Integer pageSize;
     }
     
+     /**
+     * @description Response class for the ListOrders action
+     */
     public class ListOrdersResponse {
+        /** Whether the request was successful */
         @InvocableVariable
         public Boolean isSuccess;
         
