--- a/force-app/main/default/classes/LacoreConnect/Statistics/Actions/GetStatisticsAction.cls
+++ b/force-app/main/default/classes/LacoreConnect/Statistics/Actions/GetStatisticsAction.cls
@@ -1,5 +1,15 @@
-public class GetStatisticsAction {
-    @InvocableMethod(label='Get Statistics' description='Gets statistics from LacoreConnect' category='Lacore Connect')
+/**
+ * @description Action class for retrieving statistics in LacoreConnect.
+ * This class provides an invocable method that can be called from Flow Builder
+ * to get various statistics and metrics about orders, customers, and other data.
+ */
+public with sharing class GetStatisticsAction {
+    /**
+     * @description Invocable method to get statistics in LacoreConnect
+     * @param requests List of GetStatisticsRequest objects containing statistics parameters
+     * @return List<GetStatisticsResponse> List of responses containing statistics data
+     */
+    @InvocableMethod(label='Get Statistics' description='Retrieve statistics from Lacore Connect' category='Lacore Connect')
     public static List<GetStatisticsResponse> execute(List<GetStatisticsRequest> requests) {
         List<GetStatisticsResponse> responses = new List<GetStatisticsResponse>();
         
@@ -15,26 +25,39 @@ public class GetStatisticsAction {
         return responses;
     }
     
+    /**
+     * @description Request class for the GetStatistics action
+     */
     public class GetStatisticsRequest {
+        /** The statistics request parameters */
         @InvocableVariable(required=true)
         public StatisticsRequestDto request;
     }
     
+    /**
+     * @description Response class for the GetStatistics action
+     */
     public class GetStatisticsResponse {
+        /** Whether the request was successful */
         @InvocableVariable
         public Boolean success;
         
+        /** Error message if the request failed */
         @InvocableVariable
         public String message;
         
+        /** The statistics data in JSON format */
         @InvocableVariable
-        public String data;
+        public StatisticsResponseDto data;
         
+        /**
+         * @description Constructor that creates a response from an API response
+         * @param response The API response from LacoreConnectService
+         */
         public GetStatisticsResponse(LacoreConnectService.ApiResponse response) {
             this.success = response.isSuccess;
             this.message = response.errorMessage;
-            this.data = response.body;
+            this.data = (StatisticsResponseDto) JSON.deserialize(response.body, StatisticsResponseDto.class);
         }
     }
-    
 } 
