--- a/force-app/main/default/classes/LacoreConnect/WarehouseShipments/Tests/ListWarehouseShipmentsActionTest.cls
+++ b/force-app/main/default/classes/LacoreConnect/WarehouseShipments/Tests/ListWarehouseShipmentsActionTest.cls
@@ -1,7 +1,18 @@
+/**
+ * @description Test class for ListWarehouseShipmentsAction.
+ * This class provides test coverage for listing warehouse shipments,
+ * including successful retrieval, pagination, and error handling scenarios.
+ */
 @IsTest
-private class ListWarehouseShipmentsActionTest {
+public class ListWarehouseShipmentsActionTest {
+    
+    @TestSetup
+    public static void setup() {
+        Test.setMock(HttpCalloutMock.class, new LacoreConnectServiceMock());
+    }
+    
     @IsTest
-    static void testListWarehouseShipmentsSuccess() {
+    public static void testListWarehouseShipmentsSuccess() {
         // Create test data
         WarehouseShipmentDto shipment = new WarehouseShipmentDto();
         shipment.id = '1';
@@ -9,16 +20,16 @@ private class ListWarehouseShipmentsActionTest {
         
         List<WarehouseShipmentDto> shipments = new List<WarehouseShipmentDto>{shipment};
         
-        WarehouseShipmentDtoPaginatedItemsResponse mockResponse = new WarehouseShipmentDtoPaginatedItemsResponse();
+        // Create paginated response
+        PaginatedResponseDto mockResponse = new PaginatedResponseDto();
         mockResponse.items = shipments;
         mockResponse.perPage = 10;
         mockResponse.total = 1;
         mockResponse.page = 1;
         mockResponse.totalPages = 1;
         
-        // Create a mock for LacoreConnectService
-        Test.startTest();
-        LacoreConnectService.setMock(new LacoreConnectServiceMock(mockResponse));
+        // Set up mock to return success response
+        Test.setMock(HttpCalloutMock.class, new LacoreConnectServiceMock(200, 'Success', JSON.serialize(mockResponse)));
         
         // Create request
         ListWarehouseShipmentsAction.ListWarehouseShipmentsRequest request = new ListWarehouseShipmentsAction.ListWarehouseShipmentsRequest();
@@ -28,6 +39,7 @@ private class ListWarehouseShipmentsActionTest {
         request.sortDir = 'asc';
         
         // Execute the action
+        Test.startTest();
         List<ListWarehouseShipmentsAction.ListWarehouseShipmentsResponse> responses = 
             ListWarehouseShipmentsAction.execute(new List<ListWarehouseShipmentsAction.ListWarehouseShipmentsRequest>{request});
         Test.stopTest();
@@ -36,8 +48,8 @@ private class ListWarehouseShipmentsActionTest {
         System.assertEquals(1, responses.size(), 'Should return one response');
         ListWarehouseShipmentsAction.ListWarehouseShipmentsResponse response = responses[0];
         System.assert(response.isSuccess, 'Response should be successful');
-        System.assertEquals(1, response.shipments.size(), 'Should return one shipment');
-        System.assertEquals('Test Shipment', response.shipments[0].name, 'Should return correct shipment name');
+        System.assertEquals(1, response.items.size(), 'Should return one shipment');
+        System.assertEquals('Test Shipment', response.items[0].name, 'Should return correct shipment name');
         System.assertEquals(10, response.perPage, 'Should return correct perPage value');
         System.assertEquals(1, response.total, 'Should return correct total value');
         System.assertEquals(1, response.page, 'Should return correct page value');
@@ -45,10 +57,9 @@ private class ListWarehouseShipmentsActionTest {
     }
     
     @IsTest
-    static void testListWarehouseShipmentsError() {
-        // Create a mock for LacoreConnectService that throws an exception
-        Test.startTest();
-        LacoreConnectService.setMock(new LacoreConnectServiceMock(new CalloutException('Test error')));
+    public static void testListWarehouseShipmentsError() {
+        // Set up mock to return error response
+        Test.setMock(HttpCalloutMock.class, new LacoreConnectServiceMock(400, 'Bad Request', '{"error":"invalid_request","message":"Invalid shipment data","details":["Invalid parameters"]}'));
         
         // Create request
         ListWarehouseShipmentsAction.ListWarehouseShipmentsRequest request = new ListWarehouseShipmentsAction.ListWarehouseShipmentsRequest();
@@ -56,6 +67,7 @@ private class ListWarehouseShipmentsActionTest {
         request.pageSize = 10;
         
         // Execute the action
+        Test.startTest();
         List<ListWarehouseShipmentsAction.ListWarehouseShipmentsResponse> responses = 
             ListWarehouseShipmentsAction.execute(new List<ListWarehouseShipmentsAction.ListWarehouseShipmentsRequest>{request});
         Test.stopTest();
@@ -64,6 +76,6 @@ private class ListWarehouseShipmentsActionTest {
         System.assertEquals(1, responses.size(), 'Should return one response');
         ListWarehouseShipmentsAction.ListWarehouseShipmentsResponse response = responses[0];
         System.assert(!response.isSuccess, 'Response should not be successful');
-        System.assertEquals('Test error', response.errorMessage, 'Should return correct error message');
+        System.assertEquals('Invalid shipment data', response.errorMessage, 'Should return correct error message');
     }
 } 
