--- a/force-app/main/default/classes/LacoreConnect/WarehouseShipments/Tests/MarkShipmentInTransitActionTest.cls
+++ b/force-app/main/default/classes/LacoreConnect/WarehouseShipments/Tests/MarkShipmentInTransitActionTest.cls
@@ -1,26 +1,33 @@
+/**
+ * @description Test class for MarkShipmentInTransitAction.
+ * This class provides test coverage for marking warehouse shipments as in transit,
+ * including successful status updates and error handling scenarios.
+ */
 @IsTest
-private class MarkShipmentInTransitActionTest {
+public class MarkShipmentInTransitActionTest {
+    
+    @TestSetup
+    public static void setup() {
+        Test.setMock(HttpCalloutMock.class, new LacoreConnectServiceMock());
+    }
+    
     @IsTest
-    static void testMarkShipmentInTransitSuccess() {
+    public static void testMarkShipmentInTransitSuccess() {
         // Create test data
         WarehouseShipmentDto mockResponse = new WarehouseShipmentDto();
         mockResponse.id = '1';
         mockResponse.name = 'Test Shipment';
         mockResponse.status = 'In Transit';
         
-        // Create a mock for LacoreConnectService
-        Test.startTest();
-        LacoreConnectService.setMock(new LacoreConnectServiceMock(mockResponse));
+        // Set up mock to return success response
+        Test.setMock(HttpCalloutMock.class, new LacoreConnectServiceMock(200, 'Success', JSON.serialize(mockResponse)));
         
         // Create request
-        WarehouseShipmentMarkInTransitReq transitRequest = new WarehouseShipmentMarkInTransitReq();
-        transitRequest.note = 'Test transit note';
-        
         MarkShipmentInTransitAction.MarkShipmentInTransitRequest request = new MarkShipmentInTransitAction.MarkShipmentInTransitRequest();
-        request.id = 1;
-        request.transitRequest = transitRequest;
+        request.id = '1';
         
         // Execute the action
+        Test.startTest();
         List<MarkShipmentInTransitAction.MarkShipmentInTransitResponse> responses = 
             MarkShipmentInTransitAction.execute(new List<MarkShipmentInTransitAction.MarkShipmentInTransitRequest>{request});
         Test.stopTest();
@@ -34,20 +41,16 @@ private class MarkShipmentInTransitActionTest {
     }
     
     @IsTest
-    static void testMarkShipmentInTransitError() {
-        // Create a mock for LacoreConnectService that throws an exception
-        Test.startTest();
-        LacoreConnectService.setMock(new LacoreConnectServiceMock(new CalloutException('Test error')));
+    public static void testMarkShipmentInTransitError() {
+        // Set up mock to return error response
+        Test.setMock(HttpCalloutMock.class, new LacoreConnectServiceMock(400, 'Bad Request', '{"error":"invalid_request","message":"Invalid shipment data","details":["Invalid parameters"]}'));
         
         // Create request
-        WarehouseShipmentMarkInTransitReq transitRequest = new WarehouseShipmentMarkInTransitReq();
-        transitRequest.note = 'Test transit note';
-        
         MarkShipmentInTransitAction.MarkShipmentInTransitRequest request = new MarkShipmentInTransitAction.MarkShipmentInTransitRequest();
-        request.id = 1;
-        request.transitRequest = transitRequest;
+        request.id = '1';
         
         // Execute the action
+        Test.startTest();
         List<MarkShipmentInTransitAction.MarkShipmentInTransitResponse> responses = 
             MarkShipmentInTransitAction.execute(new List<MarkShipmentInTransitAction.MarkShipmentInTransitRequest>{request});
         Test.stopTest();
@@ -56,6 +59,6 @@ private class MarkShipmentInTransitActionTest {
         System.assertEquals(1, responses.size(), 'Should return one response');
         MarkShipmentInTransitAction.MarkShipmentInTransitResponse response = responses[0];
         System.assert(!response.isSuccess, 'Response should not be successful');
-        System.assertEquals('Test error', response.errorMessage, 'Should return correct error message');
+        System.assertEquals('Invalid shipment data', response.errorMessage, 'Should return correct error message');
     }
 } 
